<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ssrmobile.MainActivity">

    <item
        android:id="@+id/action_main_setting"
        android:orderInCategory="100"
        android:title="@string/text_setting"
        android:icon="@drawable/ic_setting"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_main_qr_scan"
        android:orderInCategory="20"
        android:title="@string/text_qr_scan"
        android:icon="@drawable/ic_qr_scan"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_main_account"
        android:orderInCategory="3"
        android:title="@string/text_account"
        android:icon="@drawable/ic_account"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_main_profile"
                android:orderInCategory="3"
                android:title="@string/text_profile"/>
            <item
                android:id="@+id/action_main_changepsw"
                android:orderInCategory="4"
                android:title="@string/text_change_password"/>
            <item
                android:id="@+id/action_main_logout"
                android:orderInCategory="5"
                android:title="@string/text_logout"/>
        </menu>
    </item>

</menu>