<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/text_profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_profile_username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/text_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_profile_email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_username" />

    <TextView
        android:id="@+id/text_profile_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_profile_created_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_email" />

    <TextView
        android:id="@+id/text_profile_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_profile_asset"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_time" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="账户信息"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="充值"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_asset" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <LinearLayout
            android:id="@+id/layout_first_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout15min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text15min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="15分钟"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text30money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="￥30  "
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/button_minus15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:saveEnabled="false"
                        app:srcCompat="@drawable/ic_minus" />

                    <TextView
                        android:id="@+id/textnum15"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="0"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/button_plus15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/ic_plus" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout30min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text30min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="30分钟"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text45money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="￥45  "
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/button_minus30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:saveEnabled="false"
                        app:srcCompat="@drawable/ic_minus" />

                    <TextView
                        android:id="@+id/textnum30"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="0"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/button_plus30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/ic_plus" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_second_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout60min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text60min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="60分钟"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text60money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="￥60  "
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/button_minus60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:saveEnabled="false"
                        app:srcCompat="@drawable/ic_minus" />

                    <TextView
                        android:id="@+id/textnum60"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="0"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/button_plus60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/ic_plus" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout120min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text120min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="120分钟"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/text90money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="￥90  "
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/button_minus120"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:saveEnabled="false"
                        app:srcCompat="@drawable/ic_minus" />

                    <TextView
                        android:id="@+id/textnum120"
                        android:layout_width="56dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="0"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/button_plus120"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        app:srcCompat="@drawable/ic_plus" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_total">

        <Button
            android:id="@+id/button_profile_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onClickSubmit"
            android:text="提交" />

        <Button
            android:id="@+id/button_profile_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_weight="1"
            android:onClick="onClickReset"
            android:text="重置" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_profile_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_profile_total"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>